<resources>
    <string name="app_name">Calories</string>

    //signup
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="userName">User name</string>
    <string name="Enter_your_username">Enter your username</string>
    <string name="Password">Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="height_cm">Height(cm)</string>
    <string name="enter_your_height">Enter your height</string>

    //login
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>

    //home
    <string name="calories">Calories</string>
    <string name="xxxxxx">867</string>
    <string name="gained1">You have gained</string>
    <string name="gained2">for today</string>
    <string name="bmiHome">Your BMI : 24.0</string>
    <string name="caloriesExpect">Expecting Calories : 2250</string>


    //statistic
    <string name="stats">Calorie Chart</string>
    <string name="cstatus">Calorie Status</string>
    <string name="statBMI">Calculate your BMI now!</string>
    <string name="enter_height">Enter Height(Cm)</string>
    <string name="enter_weight">Enter Weight(Kg)</string>
    <string name="new_bmi">Your new BMI is XXX</string>
    <string name="congratulations">CONGRATULATIONS!!</string>
    <string name="now_healthy">You are now healthy!</string>
    <string name="new_weight">New Weight : XXX</string>
    <string name="new_height">New Height : XXX</string>

    <string name="title_activity_forgot_passsowrd">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //profile
    <string name="my_profile">My Profile</string>
    <string name="david123">David123</string>
    <string name="name">Name</string>
    <string name="david_hussy">David Hussy</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="davidhussy_gmail_com">Davidhussy@gmail.com</string>
    <string name="age">Age</string>
    <string name="_35">35</string>
    <string name="weight">Weight :</string>
    <string name="_82">82</string>
    <string name="height">Height :</string>
    <string name="_182">182</string>
    <string name="bmi">BMI :</string>
    <string name="_24_8">24.8</string>
    <string name="status">Status :</string>
    <string name="healthy">Healthy</string>
    <string name="update_profile">Update Profile</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="forgot_your_password_don_t_worry_give_us_your_emial_and_we_will_send_it_to_you_asap">Forgot your password? Don\'t worry! Give us your emial and we will send it to you ASAP!</string>
    <string name="email2">Email:</string>

    //add meal
    <string name="add_100cal_g_1">add 100cal g-1</string>
    <string name="add_gram">" !add gram"</string>
    <string name="_050">050</string>
    <string name="_240">240</string>
    <string name="_025">025</string>
    <string name="_350">350</string>
    <string name="_125">125</string>
    <string name="food_7">food 7</string>
    <string name="food_6">food 6</string>
    <string name="food_5">food 5</string>
    <string name="food_4">food 4</string>
    <string name="_550">550</string>
    <string name="_250">250</string>
    <string name="_300">300</string>
    <string name="save">SAVE</string>
    <string name="_100">100</string>
    <string name="_045">045</string>
    <string name="_165">165</string>
    <string name="_100cal_g_1">100 cal g-1</string>
    <string name="add_food_">+Add food</string>
    <string name="food_3">food 3</string>
    <string name="food_2">food 2</string>
    <string name="food_1">food 1</string>
    <string name="gram_">GRAM</string>
    <string name="meals">MEALS</string>
    <string name="add_meal">+ADD MEAL</string>
    <string name="yyy" />
    <string name="food_7_">food 7</string>

    //your meal
    <string name="your_meal">YOUR MEAL</string>
    <string name="meal_">MEAL</string>
    <string name="gram___">GRAM</string>
    <string name="_100_cal_g_1___">100 CAL G-1</string>
    <string name="food_1_">food 1</string>
    <string name="food_2_">food 2</string>
    <string name="food_5_">food 5</string>
    <string name="food_6_">food 6</string>
    <string name="_300_">300</string>
    <string name="_250_">250</string>
    <string name="_550_">550</string>
    <string name="_125_">125</string>
    <string name="_350_">350</string>
    <string name="_025_">025</string>
    <string name="_100_">100</string>
    <string name="_165_">165</string>
    <string name="_045_">045</string>
    <string name="_450_">450</string>
    <string name="_240_">240</string>
    <string name="_050_">050</string>
    <string name="_084_">084</string>
    <string name="food_7___">food 7</string>
    <string name="_100_____">100</string>
    <string name="total_calories____">TOTAL CALORIES</string>
    <string name="your_meal_is_saved">Your meal is saved</string>


    //menu
    <string name="content_description_search">more1</string>
    <string name="search">search</string>
    <string name="more">Home</string>
    <string name="content_description_more">sds</string>
    <string name="more2">Calorie Chart</string>
    <string name="more3">Add a meal</string>
    <string name="more6">Add water count</string>
    <string name="more4">Exercises</string>
    <string name="more5">Profile</string>
    <string name="more7">Logout</string>

    //exercise
    <string name="title">TITLE</string>
    <string name="secondary_text">sec</string>
    <string name="supporting_text">sup</string>
    <string name="exercises">Exercises</string>
    <string name="total_food">Total Foods:</string>
    <string name="xxxxx">XXXXX</string>
    <string name="calorie">Total Calories</string>
    <string name="tot_cal">TOTAL CALARIES</string>
    <string name="tot_cala">TODAY CALORIES</string>
    <string name="you_have_entered_food_count_is">You have entered food count: is</string>
    <string name="you_have_entered_food_count_is_">You have entered food count is:</string>
    <string name="tot_calarie"><![CDATA[TODAY\'s CALORIES & FOOD COUNT]]></string>
    <string name="tot_calaries">"Today's Calories and Food count "</string>
    <string name="food2">food 2</string>
    <string name="food3">food 3</string>
    <string name="food_1__" />
    <string name="food_3__" />
    <string name="food_2__" />
    <string name="food_4_" />
    <string name="food_5__" />
    <string name="food_6__" />
    <string name="food_7__" />
    <string name="__1" />
    <string name="___2__" />
    <string name="__3" />
    <string name="__4" />
    <string name="_51_" />
    <string name="__6" />
    <string name="__7" />
    <string name="__8" />
    <string name="__9" />
    <string name="__010" />
    <string name="__011" />
    <string name="__012" />
    <string name="__013" />
    <string name="__014" />
    <string name="food_count">5</string>

    //exercise display
    <string name="ex_display">Exercise Name</string>
    <string name="exText01">Expected Time</string>
    <string name="exText02">Expected Steps</string>
    <string name="exText03">Burn Calorie count</string>
    <string name="exText04">Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment 1</string>
    <string name="hello_blank_fragment2">Hello blank fragment 2</string>
    <string name="enter_your_weight_kg">Enter Your Weight | kg</string>
    <string name="enter_your_height_cm">Enter Your Height | cm</string>
    <string name="bmi_calculator">BMI Calculator</string>


    <string name="addmealp">Add Your Meal</string>
    <string name="add_mealp">"Add Your Meal "</string>
    <string name="add_meal_type" />
    <string name="add_mealtype">Enter Your Meal Type(ex:dinner)</string>
    <string name="food_name" />
    <string name="foodname">Enter Food Name(ex:rice)</string>
    <string name="food_name_">Enter Food Name(ex:rice)</string>
    <string name="addgram">Enter Gram(ex100)</string>
    <string name="addcalorie">Enter Calories(ex:25)</string>
    <string name="saveFood">Save</string>
    <string name="add">ADD FOOD</string>
    <string name="totalCal">Total calories</string>
    <string name="typeM">MEAL TYPE</string>
    <string name="nameF">FOOD NAME</string>
    <string name="gramF">GRAM</string>
    <string name="catogorieF">CATOGARIES</string>
    <string name="date">Enter Date</string>
    <string name="Date">DATE</string>
    <string name="addMeal">"Add "</string>
    <string name="tot">Total calories</string>
    <string name="date_">Enter Date(ex:mm/dd/yy)</string>
    <string name="date_of_meals">DATE</string>
    <string name="totCalName">TOTAL CALORIE</string>
    <string name="date_foods">Enter Date(ex:mm/dd/yy)</string>
    <string name="date_for_total_cal">Enter Date(ex:mm/dd/yy)</string>
    <string name="UpdateFood">UPDATE</string>
    <string name="uid">Enter Your ID(ex:u0001)</string>
    <string name="cabo">Enter Cabohydrate (ex:100)</string>
    <string name="protne">Enter protinte count(ex:10)</string>
    <string name="caboh">Enter Cobohydrate Count(ex:100)</string>
    <string name="fat">Enter Fat Count(Ex:200)</string>
    <string name="user_id">Enter User ID:(c0001)</string>
    <string name="cabohydrate">Enter Count of Carbohydrate(ex:100)</string>
    <string name="protine__">Enter Count of Protine(ex:200)</string>
    <string name="fat_">Enter Count of Fat(ex:70)</string>
    <string name="ID">ID</string>
    <string name="cabohydrate__">Cabohydrate</string>
    <string name="cabohydrte__">CARBOHYDRATE</string>
    <string name="pro_">PROTINE</string>
    <string name="fit">FAT</string>
    <string name="calories_">CALORIES</string>


    <!-- jini update : Add water count -->
    <string name="btnAddWater">Add Water Count</string>
    <string name="txtDatewater" />
    <string name="txtWaterTot" />
    <string name="txtWaterIntake">ADD WATER INTAKE</string>
    <string name="txtEnterwater">Enter Water Amount</string>
    <string name="txtEnterWater">Enter Your Water Intake</string>
    <string name="txtWaterNote">"Note: "</string>
    <string name="noteWaterBottle">500 ml water bottle = 19.61 ounces</string>
    <string name="ctnWaterCounted">Add</string>


</resources>
