<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom"
        android:title="PROFILE"/>

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/more2"
        android:title="@string/more2"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/more3"
        android:title="@string/more3"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/more4"
        android:title="@string/more3"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/more5"
        android:title="@string/more5"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never"
        />
</menu>