<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/type1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout

        android:id="@+id/viewmeal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/user_iD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ID"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"

            />


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Date"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="250dp"

            />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:text="@string/typeM"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nameF"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="80dp"

            />

        <TextView
            android:id="@+id/grmcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gramF"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="0dp"
            />

        <TextView
            android:id="@+id/caloriecount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="120dp"
            android:layout_weight="1"
            android:text="@string/calories_"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cabo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:text="@string/cabohydrte__"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/protine1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pro_"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="230dp"
            />

        <TextView
            android:id="@+id/fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230dp"
            android:layout_marginTop="120dp"
            android:layout_weight="1"
            android:text="@string/fit"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DELETE"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="130dp"



            />
    </RelativeLayout>
</LinearLayout>
