<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="1027dp"
            android:layout_height="343dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/headsm" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/height"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.608"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721" />


        <Button
            android:id="@+id/btn_save"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.872" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="189dp"
            android:layout_height="179dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.707"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.193"
            app:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="55dp"
            android:layout_height="19dp"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.165"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.431" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="183dp"
            android:layout_height="28dp"
            android:lineSpacingExtra="16sp"
            android:text="@string/david_hussy"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.463" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="147dp"
            android:layout_height="30dp"
            android:text="@string/user_name"
            android:textAlignment="textStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.223"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.504" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="206dp"
            android:layout_height="46dp"
            android:text="@string/davidhussy_gmail_com"
            android:textAlignment="textStart"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.618" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="147dp"
            android:layout_height="30dp"
            android:text="@string/david123"
            android:textAlignment="textStart"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.536" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="252dp"
            android:layout_height="28dp"
            android:text="@string/my_profile"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="252dp"
            android:layout_height="28dp"
            android:text="@string/david123"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.314"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/email"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.576" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/age"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.643" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/_35"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.667" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/_182"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/_82"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.391"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/_24_8"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.388"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.784" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/healthy"
            android:textAlignment="viewStart"
            android:textColor="#4CAF50"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.807"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.784" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/weight"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.721" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/bmi"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.181"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.784" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="74dp"
            android:layout_height="27dp"
            android:text="@string/status"
            android:textAlignment="viewStart"
            android:textColor="#070707"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.608"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.784" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:backgroundTint="@color/cardview_dark_background"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_anchorGravity="bottom|center"
        app:menu="@menu/bottom_app_bar"
        app:navigationIcon="@drawable/homenv" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_light_background"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/plus" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>